<resources>
    <string name="app_name">NASA Mars Rovers Photos</string>

    <string name="text_view_label_name">Name:</string>
    <string name="text_view_label_landing_date">Landing date:</string>
    <string name="text_view_label_launch_date">Launch date:</string>
    <string name="text_view_label_status">Status:</string>
    <string name="text_view_label_max_sol">Max sol:</string>
    <string name="text_view_label_max_date">Max date:</string>
    <string name="text_view_label_total_photos">Total photos:</string>
    <string name="text_view_label_list_cameras">Available cameras:</string>
    <string name="text_view_label_rover_name">Rover</string>
    <string name="text_view_label_cameras_name">Cameras</string>
    <string name="text_view_label_shot_sol">Sol:</string>
    <string name="text_view_label_shot_earth_date">Earth date:</string>
    <string name="text_view_label_camera_name">Camera:</string>

    <string name="channel_rover_info_name">Rover info notification channel.</string>
    <string name="channel_rover_info_description">Rover info notification channel.</string>

    <string name="action_load_latest_photos">Show new launch photos</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_map">Map</string>

    <string name="search_view_hint_sol">Sol</string>

    <string name="button_dialog_settings_save">Save</string>
    <string name="button_dialog_settings_cancel">Cancel</string>

    <string name="error_network_failure">Network problems.</string>
    <string name="error_rover_not_chosen">Rover is not chosen.</string>
    <string name="error_invalid_sol">Invalid sol.</string>
    <string name="error_get_landing_location">Get landing location fail.</string>

    <string name="image_view_rover_content_description">Rover</string>
    <string name="image_view_photo_content_description">Photo</string>

    <string name="progress_photos_content_description">Progress photos</string>
    <string name="progress_rover_names_content_description">Rover names progress</string>
    <string name="fade_in">Fade in</string>
    <string name="transparency">Transparency</string>

    <string-array name="map_types">
        <item>Visible</item>
        <item>Infrared</item>
        <item>Elevation</item>
    </string-array>
</resources>
